--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -61,6 +61,7 @@ CONFIG_MSM_LIMITER=y
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
 CONFIG_ALUCARD_TOUCHSCREEN_BOOST=y
+CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 
 #### Hotplugs ####
 CONFIG_MSM_HOTPLUG=y
