--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -43,6 +43,7 @@ CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_BRICKED_HOTPLUG=y
+CONFIG_SIMPLE_GPU_ALGORITHM=y
 
 #
 #TCP Options
