--- a/drivers/devfreq/Kconfig
+++ b/drivers/devfreq/Kconfig
@@ -98,6 +98,20 @@ config LGE_DEVFREQ_DFPS
 	select DEVFREQ_GOV_SIMPLE_ONDEMAND
 	help
 	  This adds the DEVFREQ driver for LG G3 display
+	  HW monitor based governor for cache frequency scaling. This
+	  governor currently supports only Krait L2 PM counters.  Sets the
+	  cache frequency by using L2 PM counters to monitor the Krait's use
+	  of the L2.  Since this governor uses some of the PM counters it can
+	  conflict with existing profiling tools.  This governor is unlikely
+	  to be useful for other devices.
+
+config SIMPLE_GPU_ALGORITHM
+	bool "Simple GPU algorithm"
+	depends on DEVFREQ_GOV_MSM_ADRENO_TZ
+	help
+	  Simple user configurable GPU controlling algorithm
+
+comment "DEVFREQ Drivers"
 
 config ARM_EXYNOS4_BUS_DEVFREQ
 	bool "ARM Exynos4210/4212/4412 Memory Bus DEVFREQ Driver"
