Add Sweep2Sleep configured from Sweep2Wake
Credits and thanks to savoca and dorimanx

Change-Id: I74a159ea4593e4fd5b508f1c1a9ef482cc6c88ff
Signed-off-by: 777jon <jcruzdeveloper@gmail.com>

--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -58,6 +58,8 @@ CONFIG_FRANDOM=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_MSM_LIMITER=y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
 
 #### Hotplugs ####
 CONFIG_MSM_HOTPLUG=y
