MultiRom: Implement kexec-hardboot: Re Ported to work on New Caf/MSM8974 Kernels (CM13)Implement kexec-hardboot: Re Ported to work on New Caf/MSM8974 Kernels (CM13)
Implement kexec-hardboot: Re Ported to work on New Caf/MSM8974 Kernels (CM13)

"Allows hard booting (i.e., with a full hardware reboot) to a kernel
previously loaded in memory by kexec.  This works around the problem of
soft-booted kernel hangs due to improper device shutdown and/or
reinitialization."
More info in /arch/arm/Kconfig.

Original author: Mike Kasick <mike@kasick.org>

Eliminater74 <eliminater74@gmail.com>:
  I've ported it to LG G3, it is based of my hammerhead, mako, flo
  and grouper ports, which are based of Asus TF201 patch ported
  by Jens Andersen <jens.andersen@gmail.com>

  G3 is rather similar to hammerhead - it uses device tree binary instead
  of atags. It is also rather picky - its bootloader erases first 128MB of RAM
  on reboot, so following hacks had to be applied:
  * Copy dtb to location passed in r2 before jumping to kexecd' kernel,
    the kernel would just freeze when I left dtb above 128MB of RAM.
  * Copy kexecd' kernel to location in the first 128MB before jumping to it,
    the decompressor operates very slowly if the kernel is above the cached
    area, copying it lower and decompressing it afterwards is much faster.

  The guest kernel does not require any modifications, kexec-hardboot
  is equivalent to standard kexec in this aspect.

ayysir <dresadd09691@gmail.com>:
  kexec: use mem_text_write_kernel_word to set reboot_code_buffer args
  in order to avoid protection faults (writes to read-only
  kernel memory) when CONFIG_STRICT_MEMORY_RWX is enabled.

Signed-off-by: Vojtech Bocek <vbocek@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Eliminater74 <eliminater74@gmail.com>

MultiRom: Kexec Hardboot Durp

Change-Id: Idc910d136551939c90ce95072341e3a1fa1543f4
Signed-off-by: Eliminater74 <eliminater74@gmail.com>

--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -46,6 +46,10 @@ CONFIG_BRICKED_HOTPLUG=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_POWERSUSPEND=y
 CONFIG_ADRENO_IDLER=y
+CONFIG_KEXEC=y
+CONFIG_KEXEC_HARDBOOT=y
+CONFIG_ATAGS_PROC=n
+CONFIG_PROC_DEVICETREE=y
 
 #
 #TCP Options
