cpufreq: Add awesome governors
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

[777jon]: tune smartmax governor for g3

Change-Id: I5bdb47f390044ff61193ad1e78bceac13a9453a5
Signed-off-by: 777jon <jcruzdeveloper@gmail.com>

--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -77,6 +77,15 @@ CONFIG_TCP_CONG_HTCP=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
 
 #
+# CPU Gov
+#
+CONFIG_CPU_FREQ_GOV_INTELLIMM=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+
+#
 # General setup
 #
 CONFIG_EXPERIMENTAL=y
