--- a/arch/arm/configs/cyanogenmod_f400_defconfig
+++ b/arch/arm/configs/cyanogenmod_f400_defconfig
@@ -170,6 +170,7 @@ CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_DMA_ATTRS=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
+CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
@@ -3278,6 +3279,7 @@ CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # CONFIG_ANDROID_SWITCH is not set
+CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 # CONFIG_ANDROID_INTF_ALARM_DEV is not set
 # CONFIG_VIBRATOR_PM8941_HAPTIC is not set
 # CONFIG_PHONE is not set
@@ -3381,10 +3383,12 @@ CONFIG_CORESIGHT_EVENT=y
 #
 # LGE Broadcast Device Support
 #
+CONFIG_LGE_BROADCAST_TDMB=y
 
 #
 # LGE Japanese Mobile Broadcast(ISDB-T 1seg/ISDB-Tmm 13seg) Device Support
 #
+CONFIG_LGE_BROADCAST_TDMB_FC8080=y
 CONFIG_BIF=y
 CONFIG_BIF_QPNP=y
 # CONFIG_SENSORS is not set
