--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -44,6 +44,7 @@ CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_POWERSUSPEND=y
 CONFIG_BRICKED_HOTPLUG=y
+CONFIG_ADRENO_IDLER=y
 
 #
 #TCP Options
