--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -2,6 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm 3.4.0 Kernel Configuration
 #
+
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -55,6 +56,7 @@ CONFIG_DEVFREQ_GOV_MSM_CPUFREQ=y
 CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_FRANDOM=y
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 
 #
 #TCP Options
