msm: Add alucard hotplug
Change-Id: I95a4a86db1c795b47ecd3b2ae6f6a474967943b3
[777jon: adapt for 3.4 workqueues]
Signed-off-by: 777jon <jcruzdeveloper@gmail.com>

--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -58,6 +58,12 @@ CONFIG_FRANDOM=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 
+#### Hotplugs ####
+CONFIG_MSM_HOTPLUG=y
+CONFIG_INTELLI_HOTPLUG=y
+CONFIG_BRICKED_HOTPLUG=y
+CONFIG_ALUCARD_HOTPLUG=y
+
 #
 #TCP Options
 #
