--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -60,6 +60,7 @@ CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_MSM_LIMITER=y
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
+CONFIG_ALUCARD_TOUCHSCREEN_BOOST=y
 
 #### Hotplugs ####
 CONFIG_MSM_HOTPLUG=y
