--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -42,6 +42,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 #TCP Options
