devfreq: GPU Govs: Some fix ups and ported from Nebula 1st Edition
Change-Id: I0eceb8ceee23741a3532222c0908fcb31dc4637f
Signed-off-by: Eliminater74 <eliminater74@gmail.com>

--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -50,6 +50,9 @@ CONFIG_KEXEC=y
 CONFIG_KEXEC_HARDBOOT=y
 CONFIG_ATAGS_PROC=n
 CONFIG_PROC_DEVICETREE=y
+CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
+CONFIG_DEVFREQ_GOV_MSM_CPUFREQ=y
+CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 
 #
 #TCP Options
