--- a/arch/arm/boot/dts/msm8974pro.dtsi
+++ b/arch/arm/boot/dts/msm8974pro.dtsi
@@ -1006,6 +1006,7 @@
 
 		qcom,speed3-pvs0-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  750000   73 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  106 >,
@@ -1040,6 +1041,7 @@
 
 		qcom,speed3-pvs1-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  750000   73 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  106 >,
@@ -1074,6 +1076,7 @@
 
 		qcom,speed3-pvs2-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  750000   73 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  106 >,
@@ -1108,6 +1111,7 @@
 
 		qcom,speed3-pvs3-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  750000   73 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  106 >,
@@ -1142,6 +1146,7 @@
 
 		qcom,speed3-pvs4-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  750000   73 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  106 >,
@@ -1176,6 +1181,7 @@
 
 		qcom,speed3-pvs5-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  750000   73 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  106 >,
@@ -1210,6 +1216,7 @@
 
 		qcom,speed3-pvs6-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  750000   73 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -1244,6 +1251,7 @@
 
 		qcom,speed3-pvs7-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  750000   73 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -1278,6 +1286,7 @@
 
 		qcom,speed3-pvs8-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  750000   73 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -1312,6 +1321,7 @@
 
 		qcom,speed3-pvs9-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  750000   73 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -1346,6 +1356,7 @@
 
 		qcom,speed3-pvs10-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  750000   73 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -1380,6 +1391,7 @@
 
 		qcom,speed3-pvs11-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  750000   73 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -1414,6 +1426,7 @@
 
 		qcom,speed3-pvs12-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  750000   73 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -1448,6 +1461,7 @@
 
 		qcom,speed3-pvs13-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  750000   73 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -1482,6 +1496,7 @@
 
 		qcom,speed3-pvs14-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  750000   73 >,
 			<  300000000  750000   76 >,
 			<  345600000  750000   87 >,
 			<  422400000  750000  106 >,
@@ -1516,6 +1531,7 @@
 
 		qcom,speed3-pvs15-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  750000   73 >,
 			<  300000000  750000   76 >,
 			<  345600000  750000   87 >,
 			<  422400000  750000  106 >,
@@ -1548,6 +1564,28 @@
 			< 2419200000  965000  786 >,
 			< 2457600000  970000  802 >;
 	};
+
+	qcom,msm-cpufreq@0 {
+ 		compatible = "qcom,msm-cpufreq";
+ 		qcom,cpufreq-table =
+ 			<  268800  268800  600 /*  75 MHz */ >,
+ 			<  300000  300000  600 /*  75 MHz */ >,
+ 			<  422400  422400 1200 /* 150 MHz */ >,
+ 			<  652800  499200 1600 /* 200 MHz */ >,
+ 			<  729600  576000 2456 /* 307 MHz */ >,
+ 			<  883200  576000 2456 /* 307 MHz */ >,
+ 			<  960000  960000 3680 /* 460 MHz */ >,
+ 			< 1036800 1036800 3680 /* 460 MHz */ >,
+ 			< 1190400 1036800 3680 /* 460 MHz */ >,
+ 			< 1267200 1267200 4912 /* 614 MHz */ >,
+ 			< 1497600 1497600 4912 /* 614 MHz */ >,
+ 			< 1574400 1574400 6400 /* 800 MHz */ >,
+ 			< 1728000 1651200 6400 /* 800 MHz */ >,
+ 			< 1958400 1728000 7448 /* 931 MHz */ >,
+ 			< 2265600 1728000 7448 /* 931 MHz */ >,
+ 			< 2342400 1728000 7448 /* 931 MHz */ >,
+ 			< 2457600 1728000 7448 /* 931 MHz */ >;
+ 	};
 
 	i2c@f9928000 { /* BLSP-1 QUP-6 */
 		cell-index = <3>;
