--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -53,6 +53,7 @@ CONFIG_PROC_DEVICETREE=y
 CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CPUFREQ=y
 CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
+CONFIG_FRANDOM=y
 
 #
 #TCP Options
