--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -54,6 +54,7 @@ CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CPUFREQ=y
 CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_FRANDOM=y
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 #TCP Options
