--- a/arch/arm/boot/dts/msm8974.dtsi
+++ b/arch/arm/boot/dts/msm8974.dtsi
@@ -562,7 +562,7 @@
 		interrupt-names = "hc_irq", "pwr_irq";
 		qcom,clk-rates = <400000 20000000 25000000 50000000 100000000 200000000>;
 		qcom,bus-speed-mode = "HS200_1p8v", "DDR_1p8v";
-		qcom,cpu-dma-latency-us = <100>;
+		qcom,cpu-dma-latency-us = <200>;
 
 		qcom,msm-bus,name = "sdhc1";
 		qcom,msm-bus,num-cases = <9>;
@@ -592,7 +592,7 @@
 
 		qcom,clk-rates = <400000 20000000 25000000 50000000 100000000 200000000>;
 		qcom,bus-width = <4>;
-		qcom,cpu-dma-latency-us = <100>;
+		qcom,cpu-dma-latency-us = <200>;
 
 		qcom,msm-bus,name = "sdhc2";
 		qcom,msm-bus,num-cases = <8>;
@@ -635,7 +635,7 @@
 
 		qcom,clk-rates = <400000 20000000 25000000 50000000 100000000>;
 		qcom,bus-width = <4>;
-		qcom,cpu-dma-latency-us = <100>;
+		qcom,cpu-dma-latency-us = <200>;
 
 		qcom,msm-bus,name = "sdhc3";
 		qcom,msm-bus,num-cases = <8>;
@@ -677,7 +677,7 @@
 
 		qcom,clk-rates = <400000 20000000 25000000 50000000 100000000>;
 		qcom,bus-width = <4>;
-		qcom,cpu-dma-latency-us = <100>;
+		qcom,cpu-dma-latency-us = <200>;
 
 		qcom,msm-bus,name = "sdhc4";
 		qcom,msm-bus,num-cases = <8>;
@@ -1607,39 +1607,9 @@
 			< 2265600000  925000 691 >;
 	};
 
-	cache: qcom,cache@0 {
-		reg = <0 4>;
-		compatible = "devfreq-simple-dev";
-		clock-name = "l2_clk";
-		governor = "cpufreq";
-		freq-tbl-khz =
-			<  300000 >,
-			<  345600 >,
-			<  422400 >,
-			<  499200 >,
-			<  576000 >,
-			<  652800 >,
-			<  729600 >,
-			<  806400 >,
-			<  883200 >,
-			<  960000 >,
-			< 1036800 >,
-			< 1113600 >,
-			< 1190400 >,
-			< 1267200 >,
-			< 1344000 >,
-			< 1420800 >,
-			< 1497600 >,
-			< 1574400 >,
-			< 1651200 >,
-			< 1728000 >;
-	};
-
-	cpubw: qcom,cpubw {
-		compatible = "qcom,devbw";
-		governor = "cpufreq";
-		qcom,src-dst-ports = <1 512>, <2 512>;
-		qcom,active-only;
+	qcom,cpubw {
+		compatible = "qcom,cpubw";
+		qcom,cpu-mem-ports = <1 512>, <2 512>;
 		qcom,bw-tbl =
 			<  381 /*  50 MHz */ >,
 			<  572 /*  75 MHz */ >,
@@ -1657,58 +1627,27 @@
 		compatible = "qcom,kraitbw-l2pm";
 		interrupts = <0 1 1>;
 		qcom,bytes-per-beat = <8>;
-		qcom,target-dev = <&cache>;
-	};
-
-	devfreq-cpufreq {
-		cpubw-cpufreq {
-			target-dev = <&cpubw>;
-			cpu-to-dev-map =
-				<  300000  572 >,
-				<  422400 1144 >,
-				<  652800 1525 >,
-				<  883200 2342 >,
-				< 1190400 3509 >,
-				< 1497600 4684 >,
-				< 1728000 6103 >,
-				< 2457600 7102 >;
-		};
-		cache-cpufreq {
-			target-dev = <&cache>;
-			cpu-to-dev-map =
-				<  300000  300000 >,
-				<  422400  422400 >,
-				<  652800  499200 >,
-				<  883200  576000 >,
-				<  960000  960000 >,
-				< 1190400 1036800 >,
-				< 1267200 1267200 >,
-				< 1497600 1497600 >,
-				< 1574400 1574400 >,
-				< 1728000 1651200 >,
-				< 2457600 1728000 >;
-		};
 	};
 
 	qcom,msm-cpufreq@0 {
 		reg = <0 4>;
 		compatible = "qcom,msm-cpufreq";
 		qcom,cpufreq-table =
-			<  300000 >,
-			<  422400 >,
-			<  652800 >,
-			<  729600 >,
-			<  883200 >,
-			<  960000 >,
-			< 1036800 >,
-			< 1190400 >,
-			< 1267200 >,
-			< 1497600 >,
-			< 1574400 >,
-			< 1728000 >,
-			< 1958400 >,
-			< 2265600 >,
-			< 2457600 >;
+			<  300000  300000  572 >,
+			<  422400  422400 1144 >,
+			<  652800  499200 1525 >,
+			<  729600  576000 2342 >,
+			<  883200  576000 2342 >,
+			<  960000  960000 3509 >,
+			< 1036800 1036800 3509 >,
+			< 1190400 1036800 3509 >,
+			< 1267200 1267200 4684 >,
+			< 1497600 1497600 4684 >,
+			< 1574400 1574400 6103 >,
+			< 1728000 1651200 6103 >,
+			< 1958400 1728000 7102 >,
+			< 2265600 1728000 7102 >,
+			< 2457600 1728000 7102 >;
 	};
 
 	usb3: qcom,ssusb@f9200000 {
