--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -493,9 +493,8 @@ CONFIG_RTAC=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 CONFIG_MSM_DMA_TEST=y
 # CONFIG_WIFI_CONTROL_FUNC is not set
-# CONFIG_MSM_SLEEP_TIME_OVERRIDE is not set
-CONFIG_MSM_MEMORY_LOW_POWER_MODE_IDLE_ACTIVE=y
-CONFIG_MSM_MEMORY_LOW_POWER_MODE_SUSPEND_DEEP_POWER_DOWN=y
+CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
+# CONFIG_MSM_MEMORY_LOW_POWER_MODE is not set
 CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_MODEM is not set
 # CONFIG_MSM_PM_TIMEOUT_RESET_CHIP is not set
@@ -520,9 +519,11 @@ CONFIG_MSM_PIL_VENUS=y
 # CONFIG_MSM_PIL_GSS is not set
 CONFIG_MSM_PIL_PRONTO=y
 CONFIG_MSM_SCM=y
-# CONFIG_MSM_BUSPM_DEV is not set
-# CONFIG_MSM_TZ_LOG is not set
-# CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG is not set
+CONFIG_MSM_BUSPM_DEV=y
+CONFIG_MSM_TZ_LOG=y
+CONFIG_MSM_RPM_LOG=y
+CONFIG_MSM_RPM_STATS_LOG=y
+CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG=y
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
 CONFIG_IOMMU_API=y
 CONFIG_MSM_GPIOMUX=y
@@ -532,7 +533,7 @@ CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_BUS_SCALING=y
 # CONFIG_MSM_BUS_RPM_MULTI_TIER_ENABLED is not set
 CONFIG_MSM_WATCHDOG_V2=y
-# CONFIG_MSM_MEMORY_DUMP is not set
+CONFIG_MSM_MEMORY_DUMP=y
 # CONFIG_MSM_DLOAD_MODE is not set
 CONFIG_MSM_JTAG=y
 # CONFIG_MSM_JTAG_MM is not set
@@ -557,7 +558,7 @@ CONFIG_MSM_L2_SPM=y
 CONFIG_MSM_MULTIMEDIA_USE_ION=y
 CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
-# CONFIG_MSM_OCMEM_DEBUG is not set
+CONFIG_MSM_OCMEM_DEBUG=y
 # CONFIG_MSM_OCMEM_NONSECURE is not set
 # CONFIG_MSM_OCMEM_POWER_DEBUG is not set
 # CONFIG_MSM_OCMEM_DEBUG_ALWAYS_ON is not set
@@ -578,7 +579,7 @@ CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 # CONFIG_MSM_CACHE_DUMP is not set
 # CONFIG_MSM_HSIC_SYSMON is not set
-# CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL is not set
+CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
 # CONFIG_USE_DEV_CTRL_VOLUME is not set
 # CONFIG_MSM_CPU_PWRCTL is not set
 # CONFIG_MSM_UARTDM_Core_v14 is not set
@@ -761,7 +762,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
