--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -57,9 +57,11 @@ CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_FRANDOM=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+CONFIG_MSM_LIMITER=y
 
 #### Hotplugs ####
 CONFIG_MSM_HOTPLUG=y
+CONFIG_MSM_RUN_QUEUE_STATS_BE_CONSERVATIVE=y
 CONFIG_INTELLI_HOTPLUG=y
 CONFIG_BRICKED_HOTPLUG=y
 CONFIG_ALUCARD_HOTPLUG=y
@@ -112,6 +114,16 @@ CONFIG_CPU_FREQ_GOV_SLIM=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+
+#### Schedulers ####
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_SIOPLUS=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_TRIPNDROID=y
 
 #
 # General setup
@@ -300,15 +312,10 @@ CONFIG_IOSCHED_TEST=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_BFQ=y
-CONFIG_CGROUP_BFQIO=y
-CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_SIOPLUS=y
-CONFIG_IOSCHED_ZEN=y
-CONFIG_IOSCHED_VR=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_ROW=y
 # CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="row"
