Add and update state notifier
Change-Id: I7db9b163f2f054d5398017d99c14ecc44b6250d7

--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -63,6 +63,7 @@ CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
 CONFIG_ALUCARD_TOUCHSCREEN_BOOST=y
 CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
+CONFIG_STATE_NOTIFIER=y
 
 #### Hotplugs ####
 CONFIG_MSM_HOTPLUG=y
