--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1052,4 +1052,9 @@ config ALUCARD_TOUCHSCREEN_BOOST
 	help
 	  Alucard touchscreen boost.
 
+config STATE_NOTIFIER
+        bool "State Notifier"
+	depends on TOUCHSCREEN_SYNAPTICS_G3
+	default y
+
 endif
