--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -469,7 +469,14 @@ config SND_SOC_MSM_HDMI_CODEC_RX
         supports hdmi panel.
 
 config SOUND_CONTROL_HAX_3_GPL
-	tristate "new wcd93xx sound control hax"
-	default y
+	tristate "GPL Sound Control 3.x"
+	default n
 	help
-	  FauxSound WCD93xx chipset sound control hacks 3.0 for deeper hax
+	  Controls the WCD93XX chipset tunables to allow userspace fine tuning.
+
+config STWEAKS_CONTROL
+	bool "STweaks for GPL Sound Control 3.x"
+	depends on SOUND_CONTROL_HAX_3_GPL
+	default n
+	help
+	  Whether the GPL Sound Control 3.x will support the STweaks tuning interface.
